--- a/networks/src/App.css
+++ b/networks/src/App.css
@@ -1,3 +1,11 @@
 .App{
-  background-color: "blue";
+  height: 100%;
+  width: 100%;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.AppElements{
+  width: 97%;
 }
