Added forced connectedness & small layout/color updates

--- a/networks/src/Network.css
+++ b/networks/src/Network.css
@@ -1,7 +1,7 @@
 .networkCanvas{
-  margin-top: 2%;
   background-color: #FFFFFF;
   border: #000000 2px solid;
+  margin-bottom: 0px;
 }
 .network{
 
