--- a/networks/src/Network.css
+++ b/networks/src/Network.css
@@ -1,7 +1,7 @@
 .networkCanvas{
   background-color: #FFFFFF;
   border: #000000 2px solid;
-  margin-bottom: 0px;
+  margin-top: 1%;
 }
 .network{
 
