--- a/networks/src/index.css
+++ b/networks/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #000000;
+  background-color: #C0C0C0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
