--- a/src/TutorialWindow.css
+++ b/src/TutorialWindow.css
@@ -1,13 +1,18 @@
 .Modal{
+  position: absolute;
+  left:10%;
+  right: 10%;
+  top: 10%;
+  bottom:10%;
 
 }
 
 .Overlay{
   position: fixed;
-    top: 10%;
-    left: 10%;
-    right: 10%;
-    bottom: 10%;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+    bottom: 0%;
 }
 
 .closeb{
