--- a/src/NetworkAlgorithmSettings.css
+++ b/src/NetworkAlgorithmSettings.css
@@ -1,13 +1,12 @@
 .algorithmsettings{
   position: absolute;
-  top:10%;
-  left:10%;
-  right:10%;
+  top:60%;
+  left:0%;
+  right:0%;
+  bottom:0%;
   padding-left: 20px;
   padding-right: 20px;
-  background-color: #d3d3d3;
-  margin-bottom: 5%;
-  height:80%;
+  background-color: #787878;
   overflow: scroll;
 }
 
