--- a/src/Network3D.css
+++ b/src/Network3D.css
@@ -1,12 +1,12 @@
 .canvas3d{
   margin-top: 2.5rem;
-  background-color: #FFFFFF;
+  background-color: #000000;
   padding-left: 0;
   padding-right: 0;
   margin-left: auto;
   margin-right: auto;
   display:block;
-  border: #000000 2px solid;
+  border: #ffffff 2px solid;
 }
 
 .b{
