--- a/src/NetworkAlgorithmSettings.css
+++ b/src/NetworkAlgorithmSettings.css
@@ -7,7 +7,9 @@
   padding-left: 20px;
   padding-right: 20px;
   background-color: #787878;
+  border-top: 2px black solid;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 .algorithmsettingsoverlay{
