--- a/src/AlgorithmAttributes.css
+++ b/src/AlgorithmAttributes.css
@@ -4,7 +4,7 @@
 }
 
 .searchbar{
-  margin-top: 1%;
+  background-color: #606060;
   display: flex;
   flex-direction: row;
   justify-content: center;
