--- a/src/NetworkNavBar.css
+++ b/src/NetworkNavBar.css
@@ -53,11 +53,12 @@
 
 .toolbar__search{
   position:absolute;
-  right: 5%;
+  right: 7%;
 
 }
 .toolbar__search label{
   color:white;
+  margin-right: 10px;
   font-size: 1.4em;
   vertical-align: middle;
 }
