--- a/src/GeneralNetworkSettings.css
+++ b/src/GeneralNetworkSettings.css
@@ -26,3 +26,10 @@
   margin-right: auto;
   display:block;
 }
+
+.resizeButton{
+  background-color: #ffffff;
+  width: 100%;
+  height:100%;
+  margin: 0;
+}
