--- a/src/AlgorithmAttributes.css
+++ b/src/AlgorithmAttributes.css
@@ -23,3 +23,11 @@ p{
 label{
   color:white;
 }
+
+.colorCanvas{
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display:block;
+}
