--- a/src/Network3D.css
+++ b/src/Network3D.css
@@ -76,7 +76,7 @@
 }
 
 .StopB{
-  background-image: url("../src/images/StopButton.png");
+  background: linear-gradient(rgba(255,165,0,0.5),rgba(255,165,0,0.5)),url("../src/images/StopButton.png");
   background-size: 50px 50px;
   height: 50px;
   width: 50px;
