--- a/src/NetworkCustom.css
+++ b/src/NetworkCustom.css
@@ -8,3 +8,361 @@
   display:block;
   border: #000000 2px solid;
 }
+
+.animationsButtons{
+  display: flex;
+  justify-content: center;
+
+}
+
+.placeB{
+  background: url("../src/images/PlaceButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.placeB:hover{
+  background: linear-gradient(rgba(0,255,0,0.7), rgba(0,165,0,0.7)),url("../src/images/PlaceButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.placeB:disabled{
+  background: linear-gradient(rgba(0,0,255,0.7), rgba(0,0,255,0.7)),url("../src/images/PlaceButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.placeB:disabled:hover{
+  background: linear-gradient(rgba(0,0,255,0.7), rgba(0,0,255,0.7)),url("../src/images/PlaceButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.connectB{
+  background: url("../src/images/ConnectButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.connectB:hover{
+  background: linear-gradient(rgba(0,255,0,0.7), rgba(0,165,0,0.7)), url("../src/images/ConnectButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.connectB:disabled{
+  background: linear-gradient(rgba(0,0,255,0.7), rgba(0,0,255,0.7)), url("../src/images/ConnectButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.connectB:disabled:hover{
+  background: linear-gradient(rgba(0,0,255,0.7), rgba(0,0,255,0.7)), url("../src/images/ConnectButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.selectB{
+  background: url("../src/images/SelectButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.selectB:hover{
+  background: linear-gradient(rgba(0,255,0,0.7), rgba(0,165,0,0.7)), url("../src/images/SelectButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.selectB:disabled{
+  background: linear-gradient(rgba(0,0,255,0.7), rgba(0,0,255,0.7)), url("../src/images/SelectButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.selectB:disabled:hover{
+  background: linear-gradient(rgba(0,0,255,0.7), rgba(0,0,255,0.7)), url("../src/images/SelectButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.moveB{
+  background: url("../src/images/MoveButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.moveB:hover{
+  background: linear-gradient(rgba(0,255,0,0.7), rgba(0,165,0,0.7)), url("../src/images/MoveButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.moveB:disabled{
+  background: linear-gradient(rgba(0,0,255,0.7), rgba(0,0,255,0.7)), url("../src/images/MoveButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.moveB:disabled:hover{
+  background: linear-gradient(rgba(0,0,255,0.7), rgba(0,0,255,0.7)), url("../src/images/MoveButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.cameraB{
+  background: url("../src/images/CameraButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.cameraB:hover{
+  background: linear-gradient(rgba(0,255,0,0.7), rgba(0,165,0,0.7)), url("../src/images/CameraButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.cameraB:disabled{
+  background: linear-gradient(rgba(211,211,211,0.7), rgba(211,211,211,0.7)), url("../src/images/CameraButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.cameraB:disabled:hover{
+  background: linear-gradient(rgba(211,211,211,0.7), rgba(211,211,211,0.7)), url("../src/images/CameraButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.clearB{
+  background: url("../src/images/ResetButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.clearB:hover{
+  background: linear-gradient(rgba(0,255,0,0.7), rgba(0,165,0,0.7)), url("../src/images/ResetButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.clearB:disabled{
+  background: linear-gradient(rgba(211,211,211,0.7), rgba(211,211,211,0.7)), url("../src/images/ResetButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.clearB:disabled:hover{
+  background: linear-gradient(rgba(211,211,211,0.7), rgba(211,211,211,0.7)), url("../src/images/ResetButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.undoB{
+  background: url("../src/images/UndoButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.undoB:hover{
+  background: linear-gradient(rgba(0,255,0,0.7),rgba(0,165,0,0.7)),url("../src/images/UndoButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.undoB:disabled{
+  background: linear-gradient(rgba(211,211,211,0.7),rgba(211,211,211,0.7)),url("../src/images/UndoButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.undoB:disabled:hover{
+  background: linear-gradient(rgba(211,211,211,0.7),rgba(211,211,211,0.7)),url("../src/images/UndoButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.redoB{
+  background: url("../src/images/RedoButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.redoB:hover{
+  background: linear-gradient(rgba(0,255,0,0.7),rgba(0,165,0,0.7)),url("../src/images/RedoButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.redoB:disabled{
+  background: linear-gradient(rgba(211,211,211,0.7),rgba(211,211,211,0.7)),url("../src/images/RedoButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.redoB:disabled:hover{
+  background: linear-gradient(rgba(211,211,211,0.7),rgba(211,211,211,0.7)),url("../src/images/RedoButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.saveB{
+  background: url("../src/images/SaveButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.saveB:hover{
+  background: linear-gradient(rgba(0,255,0,0.7),rgba(0,165,0,0.7)),url("../src/images/SaveButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.saveB:disabled{
+  background: linear-gradient(rgba(211,211,211,0.7),rgba(211,211,211,0.7)),url("../src/images/SaveButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.saveB:disabled:hover{
+  background: linear-gradient(rgba(211,211,211,0.7),rgba(211,211,211,0.7)),url("../src/images/SaveButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.uploadB{
+  background: url("../src/images/UploadButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.uploadB:hover{
+  background: linear-gradient(rgba(0,255,0,0.7),rgba(0,165,0,0.7)),url("../src/images/UploadButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.uploadB:disabled{
+  background: linear-gradient(rgba(211,211,211,0.7),rgba(211,211,211,0.7)),url("../src/images/UploadButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.uploadB:disabled:hover{
+  background: linear-gradient(rgba(211,211,211,0.7),rgba(211,211,211,0.7)),url("../src/images/UploadButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.exportB{
+  background: url("../src/images/ExportButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.exportB:hover{
+  background: linear-gradient(rgba(0,255,0,0.7),rgba(0,165,0,0.7)),url("../src/images/ExportButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.exportB:disabled{
+  background: linear-gradient(rgba(211,211,211,0.7),rgba(211,211,211,0.7)),url("../src/images/ExportButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.exportB:disabled:hover{
+  background: linear-gradient(rgba(211,211,211,0.7),rgba(211,211,211,0.7)),url("../src/images/ExportButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
