--- a/src/NetworkCustom.css
+++ b/src/NetworkCustom.css
@@ -15,6 +15,39 @@
 
 }
 
+.dropdown{
+  position:relative;
+  display: inline-block;
+}
+
+.dropdown-content{
+  display:none;
+  position:absolute;
+  background-color: #f1f1f1;
+  max-width: 100px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index:1;
+}
+
+.dropdown-content a{
+  color:black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display:block;}
+
+.aFile{
+  text-decoration: none;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+}
+
 .placeB{
   background: url("../src/images/PlaceButton.png");
   border: 1px solid black;
