--- a/src/Network.css
+++ b/src/Network.css
@@ -114,6 +114,40 @@
   text-align: center;
 }
 
+.dropdown{
+  position:relative;
+  display: inline-block;
+}
+
+.dropdown-content{
+  display:none;
+  position:absolute;
+  background-color: #f1f1f1;
+  max-width: 100px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index:1;
+}
+
+.dropdown-content a{
+  color:black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display:block;}
+
+.aFile{
+  text-decoration: none;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+}
+
+
 .FirstFrameB{
   background-image: url("../src/images/FirstButton.png");
   background-size: 50px 50px;
@@ -584,4 +618,36 @@
   width: 50px;
   border: 1px solid black;
   outline: none;
+}
+
+.saveB{
+  background: url("../src/images/SaveButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.saveB:hover{
+  background: linear-gradient(rgba(0,255,0,0.7),rgba(0,165,0,0.7)),url("../src/images/SaveButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.saveB:disabled{
+  background: linear-gradient(rgba(211,211,211,0.7),rgba(211,211,211,0.7)),url("../src/images/SaveButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.saveB:disabled:hover{
+  background: linear-gradient(rgba(211,211,211,0.7),rgba(211,211,211,0.7)),url("../src/images/SaveButton.png");
+  border: 1px solid black;
+  outline: none;
+  max-height: 100px;
+  max-width: 100px;
 }
