--- a/src/Settings/NetworkSideDrawer.css
+++ b/src/Settings/NetworkSideDrawer.css
@@ -1,5 +1,9 @@
 .toggle_button{
-  margin-top: 20%;
+  background: url("../../src/images/DrawerButton.png");
+  cursor: pointer;
+  outline: none;
+  border: none;
+  /* margin-top: 20%;
   display:flex;
   flex-direction: column;
   justify-content: space-around;
@@ -9,7 +13,7 @@
   background: transparent;
   cursor:pointer;
   padding: 0 0;
-  box-sizing: border-box;
+  box-sizing: border-box; */
 }
 
 .toggle_button:focus {
@@ -33,7 +37,6 @@
 
 .sidedraweroverlay{
   position: fixed;
-    top: 2rem;
     left: 0;
     right: 0;
     bottom: 0;
