--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,14 @@
   font-size: 32px;
   color: #000000;
 }
+
+
+.noSelectText{
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
